--- a/wp-content/themes/aquilo/css/common-css/elements.css
+++ b/wp-content/themes/aquilo/css/common-css/elements.css
@@ -147,7 +147,7 @@ ul.ui-tabs-nav li.ui-state-active a:focus		{color:#fff;}
 /*-----------------------------------------------------------------------------------*/
 /*	Columns
 /*-----------------------------------------------------------------------------------*/
-.one-one, .one-two, .one-three, .one-four, .one-five
+.one-one, .one-two, .one-three, .one-four, .one-five,
 .two-three, .three-four 				{float:left;
 										margin-right:1.75%;
 										margin-left:1.75%;
@@ -158,7 +158,7 @@ ul.ui-tabs-nav li.ui-state-active a:focus		{color:#fff;}
 .one-three 			{width:31%;}
 .two-three 			{width:65.4%;}
 .one-four			{width:22.35%;}
-.one-five			{width:19.3%;}
+.one-five			{width:17.1%;}
 
 .three-four			{width:74%;}
 
@@ -183,11 +183,11 @@ ul.ui-tabs-nav li.ui-state-active a:focus		{color:#fff;}
 
 .button-big 				{font-size:115%;
 							text-transform:uppercase;
-							background-image:url(../common-images/elements/button-bg.png);
+							background-image:url(../common-images/elements/button-bg.png);m
 							background-repeat:repeat-x;
 							background-position:left bottom;
 							background-color:#abc53e;
-							color:#fff;
+							color:#fff;m
 							padding:5px 12px;
 							display:inline-block;
 							margin:0 5px 5px 0;
