- removed comment count on blog page

--- a/wp-content/themes/aquilo/css/common-css/common-style.less
+++ b/wp-content/themes/aquilo/css/common-css/common-style.less
@@ -595,7 +595,8 @@ input[type=submit]:hover	{background-position:left top;}
 .header-article-info ul li.blog-post-meta-category	{background:url(../common-images/icons/16x16/folder_2.png) no-repeat left 2px;}
 .header-article-info ul li.blog-post-meta-comment	{background:url(../common-images/icons/16x16/comment_2.png) no-repeat left 2px;
 													float:right;
-													margin-right:0;}
+													margin-right:0;
+													display: none;}
 
 
 
