--- a/wp-content/plugins/cforms/styling/sidebar-layout.css
+++ b/wp-content/plugins/cforms/styling/sidebar-layout.css
@@ -226,6 +226,7 @@ p.cf-sb {
 	border:1px solid #adadad!important;
 	border-left-color:#ececec!important; 
 	border-top-color:#ececec!important;
+	color: #000;
 }
 .cform input.resetbutton {
 	width: auto;
