--- a/wp-content/themes/aquilo/style.css
+++ b/wp-content/themes/aquilo/style.css
@@ -35,6 +35,9 @@ Text Domain: aquilo
 	margin-bottom: 20px;
 	padding-left: 1em;
 }
-.list-unordered {
+li .list-unordered {
+	padding- bottom: 0px;
+}
+.list-unordered li {
 	list-style: circle;
 }
